--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "",
   "version": "",
+  "browser": "src/main.js",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "quasar": "^1.15.5",
+    "vue": "^2.6.12",
     "vue-cli": "^2.9.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
